2016-07-12  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/GSICUString.m (UTextNSStringAccess): Fix unsigned
	comparison to properly detect integer underflows.

2016-07-06  Niels Grewe <niels.grewe@halbordnung.de>

	* Tests/base/NSRegularExpression/basic.m: Test for -pattern
	double free.

2016-07-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSRegularExpression.m (-pattern): Fix bug where a UText
	structure owned by the icu library is incorrectly closed, which
	was causing a crash when -pattern is called more than once for the
	same NSRegularExpression.

2016-07-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSKeyValueObserving.m: Remove some unnecessary locking
	* Source/NSOperation.m: Simplify handling of finishing of operation
	to avoid occasional deadlock if an operation finishes in one thread
	while in another thread we are waiting for it.

2016-07-01  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSICUString.m: For immutable strings, cache the string
	length in the UText structure to avoid repeated calls to -length

2016-06-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSICUString.m: Re-implement the function to let ICU access
	the contents of an NSString.  The original version looks like it was
	broken for cases where an algorithm is moving backwards in the string
	(reverse search and regular expression parsing).
	I hope the new implementation is correct (or at least clearer); the
	ICU documentation is minimal and I didn't find any reference/example
	implementations to work from.

2016-06-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDebug.m: Yse setjmp/longjmp from NSException.h
	* Headers/Foundation/NSException.h: On mingw-w64 use the builtin
	setjmp/longjmp provided by gcc since the mingw version sometimes
	crashes.

2016-06-28  Richard Frith-Macdonald <rfm@gnu.org>

	* SSL: Openssl bundle directory deleted
	* GNUmakefile: Don't build openssl bundle
	* Source/NSFileHandle.m: Don't load openssl bundle